Add option `--add-modules` to JdkTool.Javac